--- a/project/www/src/stylesheets/main.css
+++ b/project/www/src/stylesheets/main.css
@@ -87,9 +87,53 @@ footer .container {
     text-transform: uppercase;
 }
 
+.ul-inline {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.ul-inline li {
+    margin: 0 0.5rem;
+}
+
+/*
+    * Colors
+ */
+
+.blue {
+    color: var(--info);
+}
+
+.red {
+    color: var(--error);
+}
+
+.green {
+    color: var(--success);
+}
+
+.orange {
+    color: var(--warning);
+}
+
 /*
     * Forms
  */
+
+form {
+    max-width: 350px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1.5rem;
+    border-radius: 5px;
+}
+
+label {
+    margin-bottom: 0.5rem;
+}
 
 .form-fields {
     display: flex;
@@ -104,13 +148,53 @@ footer .container {
 a {
     font-weight: bold;
     text-decoration: none;
-    color: var(--primary);
+    color: var(--black);
 }
 
 /*
-    *
+    * Buttons
+ */
+
+.btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--white);
+    border: none;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.btn--success {
+    background-color: var(--success);
+}
+
+/*
+    * Pages
  */
 
 .text-info {
     max-width: 350px;
+}
+
+.error-page a {
+    color: var(--warning);
+}
+
+.get-page a {
+    color: var(--info);
+}
+
+.post-page a {
+    color: var(--success);
+}
+
+.delete-page a {
+    color: var(--error);
 }
