fix(cgi): refacto buildResponse()

--- a/project/www/src/stylesheets/main.css
+++ b/project/www/src/stylesheets/main.css
@@ -110,6 +110,7 @@ footer .container {
     list-style: none;
     margin: 0;
     padding: 0;
+    text-transform: uppercase;
 }
 
 .ul-inline li {
